# ruma

./: .clippy.toml  .deny.toml  .editorconfig  .gitignore  .rumdl.toml  .rustfmt.toml  .tomlfmt.toml  .travis.yml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  architecture.md  rust-toolchain.toml  rustfmt.toml  state.md
crates/ruma-api-macros/: Cargo.toml  README.md
crates/ruma-api-macros/src/: api.rs  (+6 more)
crates/ruma-appservice-api/: CHANGELOG.md  Cargo.toml  README.md
crates/ruma-client/: CHANGELOG.md  Cargo.toml  build.rs
crates/ruma-client-api/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/ruma-common/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/ruma-events/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/ruma-events-macros/: Cargo.toml  README.md
crates/ruma-federation-api/: CHANGELOG.md  Cargo.toml  README.md
crates/ruma-html/: CHANGELOG.md  Cargo.toml  README.md
ruma/: Cargo.toml  README.md
ruma-api/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
ruma-api-macros/: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
ruma-api-macros/src/: api.rs  derive_outgoing.rs  lib.rs  send_recv.rs  util.rs
ruma-api-macros/tests/: ruma_api_macros.rs
ruma-api/src/: error.rs  lib.rs
ruma-api/tests/: authentication.rs  conversions.rs  header_override.rs  manual_endpoint_impl.rs  no_fields.rs  optional_headers.rs  outgoing.rs  ruma_api.rs  ruma_api_lifetime.rs  ruma_api_macros.rs
ruma-appservice-api/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
ruma-appservice-api/.builds/: beta.yml
ruma-appservice-api/src/: directory.rs  event.rs  lib.rs  query.rs  v1.rs
ruma-client/: CHANGELOG.md  Cargo.toml  README.md  build.rs
ruma-client-api/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
ruma-client-api/.builds/: beta.yml
ruma-client-api/src/: error.rs  lib.rs  r0.rs  unversioned.rs
ruma-client/.builds/: stable.yml
ruma-client/examples/: hello_isahc.rs  hello_world.rs  message_log.rs
ruma-client/src/: client_api.rs  error.rs  http_client.rs  lib.rs  session.rs
ruma-common/: CHANGELOG.md  Cargo.toml  README.md
ruma-common-macros/: Cargo.toml
ruma-common-macros/src/: case.rs  deserialize_from_cow_str.rs  display_as_ref_str.rs  enum_from_string.rs  lib.rs  outgoing.rs  serialize_as_ref_str.rs  util.rs
ruma-common/.builds/: beta.yml  nightly.yml  stable.yml
ruma-common/src/: directory.rs  encryption.rs  lib.rs  power_levels.rs  presence.rs  push.rs  raw.rs  thirdparty.rs
ruma-common/tests/: enum_derive.rs  outgoing.rs
ruma-events/: CHANGELOG.md  Cargo.toml  README.md
ruma-events-macros/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
ruma-events-macros/src/: any_deserialize.rs  collection.rs  content_enum.rs  event.rs  event_content.rs  event_enum.rs  event_names.rs  event_parse.rs  from_raw.rs  gen.rs  lib.rs  parse.rs  state.rs
ruma-events-macros/tests/: ruma_events_macros.rs
ruma-events/.builds/: beta.yml  msrv.yml  nightly.yml
ruma-events/benches/: event_deserialize.rs
ruma-events/src/: algorithm.rs  call.rs  custom.rs  direct.rs  dummy.rs  enums.rs  error.rs  event_kinds.rs  event_type.rs  forwarded_room_key.rs  fully_read.rs  ignored_user_list.rs  json.rs  key.rs  lib.rs  pdu.rs  presence.rs  push_rules.rs  reaction.rs  receipt.rs  room.rs  room_key.rs  room_key_request.rs  sticker.rs  tag.rs  util.rs  zzz.rs
ruma-events/tests/: any_deserialize_derive.rs  any_enums.rs  custom.rs  enums.rs  ephemeral_event.rs  event_content.rs  event_enums.rs  message_event.rs  pdu.rs  redacted.rs  redaction.rs  room_message.rs  state_event.rs  stripped.rs  stripped.rs.bk  to_device.rs
ruma-federation-api/: CHANGELOG.md  Cargo.toml  README.md
ruma-federation-api/.builds/: nightly.yml
ruma-federation-api/src/: authorization.rs  backfill.rs  device.rs  discovery.rs  event.rs  identification.rs  keys.rs  lib.rs  membership.rs  openid.rs  pdu.rs  query.rs  serde.rs  thirdparty.rs  transactions.rs
ruma-identifiers/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
ruma-identifiers-macros/: Cargo.toml  LICENSE
ruma-identifiers-macros/src/: lib.rs
ruma-identifiers-validation/: CHANGELOG.md  Cargo.toml
ruma-identifiers-validation/src/: crypto_algorithms.rs  device_key_id.rs  error.rs  event_id.rs  key_algorithms.rs  lib.rs  mxc_uri.rs  room_alias_id.rs  room_id_or_alias_id.rs  room_version_id.rs  server_key_id.rs  server_name.rs  signing_key_id.rs  user_id.rs
ruma-identifiers/.builds/: beta.yml  msrv.yml  nightly.yml  stable.yml
ruma-identifiers/src/: crypto_algorithms.rs  device_id.rs  device_key_id.rs  error.rs  event_id.rs  key_algorithms.rs  lib.rs  macros.rs  mxc_uri.rs  opaque_ids.rs  room_alias_id.rs  room_id.rs  room_id_or_room_alias_id.rs  room_version_id.rs  server_key_id.rs  server_name.rs  signatures.rs  signing_key_id.rs  user_id.rs  util.rs
ruma-identity-service-api/: CHANGELOG.md  Cargo.toml  README.md
ruma-identity-service-api/src/: association.rs  keys.rs  lib.rs  lookup.rs  tos.rs
ruma-push-gateway-api/: CHANGELOG.md  Cargo.toml  README.md
ruma-push-gateway-api/src/: lib.rs  notify.rs  push.rs
ruma-serde/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
ruma-serde-macros/: Cargo.toml
ruma-serde-macros/src/: case.rs  display_as_ref_str.rs  enum_as_ref_str.rs  lib.rs  outgoing.rs  serialize_as_ref_str.rs  util.rs
ruma-serde/.builds/: msrv.yml  nightly.yml  stable.yml
ruma-serde/src/: boolean.rs  can_be_empty.rs  canonical_json.rs  cow.rs  de_with_default.rs  empty.rs  json_string.rs  lib.rs  raw.rs  single_element_seq.rs  strings.rs  test.rs
ruma-serde/tests/: outgoing.rs  url_deserialize.rs  url_serialize.rs
ruma-signatures/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
ruma-signatures/.builds/: nightly.yml  stable.yml
ruma-signatures/src/: functions.rs  keys.rs  lib.rs  signatures.rs  verification.rs
ruma/src/: lib.rs
ruma/tests/: id-macros.rs  outgoing.rs
xtask/: Cargo.toml  README.md  config.toml.sample  test.toml.sample
xtask/src/: bench.rs  cargo.rs  ci.rs  doc.rs  flags.rs  main.rs  release.rs  semver.rs  spec_links.rs  util.rs
(+2594 files in other folders)
