[workspace]
members = ["crates/*", "xtask"]
# Only compile / check / document the public crates by default
default-members = ["crates/*"]
resolver = "3"

[workspace.package]
# Keep in sync with README.md, xtask/src/ci.rs and .github/workflows/ci.yml
rust-version = "1.88"

[workspace.dependencies]
as_variant = "1.2.0"
assert_matches2 = "0.1.0"
assign = "1.1.1"
base64 = "0.22.0"
bytes = "1.11.1"
criterion = "0.7.0"
http = "1.1.0"
insta = { version = "1.41.1", features = ["json"] }
js_int = "0.2.2"
js_option = "0.2.0"
language-tags = { version = "0.3.2", features = ["serde"] }
maplit = "1.0.2"
rand = "0.8.5"
ruma-appservice-api = { version = "0.14.1", path = "crates/ruma-appservice-api" }
ruma-client-api = { version = "0.22.1", path = "crates/ruma-client-api" }
ruma-common = { version = "0.17.1", path = "crates/ruma-common" }
ruma-events = { version = "0.32.1", path = "crates/ruma-events" }
ruma-federation-api = { version = "0.13.1", path = "crates/ruma-federation-api" }
ruma-html = { version = "0.6.0", path = "crates/ruma-html" }
ruma-identifiers-validation = { version = "0.12.0", path = "crates/ruma-identifiers-validation" }
ruma-identity-service-api = { version = "0.13.0", path = "crates/ruma-identity-service-api" }
ruma-macros = { version = "=0.17.1", path = "crates/ruma-macros" }
ruma-push-gateway-api = { version = "0.13.0", path = "crates/ruma-push-gateway-api" }
ruma-signatures = { version = "0.19.0", path = "crates/ruma-signatures" }
ruma-state-res = { version = "0.15.0", path = "crates/ruma-state-res" }
serde = { version = "1.0.164", features = ["derive"] }
serde_html_form = "0.2.0"
serde_json = "1.0.87"
similar = "2.6.0"
thiserror = "2.0.0"
toml = { version = "0.9.6", default-features = false, features = ["parse", "serde"] }
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "e5f4821410bea19e71984ea5e06a7bc8b11ed9e5", version = "0.31.0", default-features = false, features = ["wasm-unstable-single-threaded"] }
url = { version = "2.5.0" }
web-time = "1.1.0"
wildmatch = "2.6.1"
zeroize = "1.8.1"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
semicolon_in_expressions_from_macros = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ruma_identifiers_storage, values("Arc", "ArcStr", "SmallVec", "CompactString", "ArcIntern", "EcoString"))', # used by the IdDst macro
    'cfg(ruma_unstable_exhaustive_types)', # set all types as exhaustive
] }
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
branches_sharing_code = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
disallowed_types = "warn"
empty_line_after_outer_attr = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
map_flatten = "warn"
missing_enforced_import_renames = "warn"
mod_module_files = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
todo = "warn"
unnecessary_semicolon = "warn"
unreadable_literal = "warn"
unseparated_literal_suffix = "warn"
wildcard_imports = "warn"

# Not that good of a lint
new_without_default = "allow"

[workspace.metadata.cargo-semver-checks.lints]
# Triggers false positives
partial_ord_enum_variants_reordered = "allow"

[profile.dev]
# Speeds up test times by more than 10% in a simple test
# Set to 1 or 2 if you want to use a debugger in this workspace
debug = 0

[profile.dev.package]
# Also speeds up test times a little bit
insta = { opt-level = 3 }
quote = { opt-level = 2 }
similar = { opt-level = 3 }
