[package]
authors = [
  "Jimmy Cuadra <jimmy@jimmycuadra.com>",
  "Jonas Platte <jplatte@posteo.de>",
]
categories = ["api-bindings", "web-programming"]
description = "A procedural macro for generating ruma-api Endpoints."
documentation = "https://docs.rs/ruma-api-macros"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-api-macros"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.17.0-alpha.1"
edition = "2018"

[dependencies]
proc-macro2 = "1.0.19"
quote = "1.0.7"
syn = { version = "1.0.31", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
