[package]
authors = [
  "Jimmy Cuadra <jimmy@jimmycuadra.com>",
  "Jonas Platte <jplatte@posteo.de>",
]
categories = ["api-bindings", "web-programming"]
description = "An abstraction for Matrix API endpoints."
documentation = "https://docs.rs/ruma-api"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.17.0-alpha.1"
edition = "2018"

[dependencies]
http = "0.2.1"
percent-encoding = "2.1.0"
ruma-api-macros = { version = "=0.17.0-alpha.1", path = "../ruma-api-macros" }
ruma-common = { version = "0.2.0", path = "../ruma-common" }
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.3", path = "../ruma-serde" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
strum = "0.19.2"
thiserror = "1.0.20"

[dev-dependencies]
ruma-common = { version = "0.2.0", path = "../ruma-common" }
ruma-events = { version = "=0.22.0-alpha.1", path = "../ruma-events" }
trybuild = "1.0.31"
