[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Jonas Platte <jplatte@posteo.de>",
]
categories = ["api-bindings", "web-programming"]
description = "An abstraction for Matrix API endpoints."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.17.0-alpha.2"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
http = "0.2.2"
percent-encoding = "2.1.0"
ruma-api-macros = { version = "=0.17.0-alpha.2", path = "../ruma-api-macros" }
ruma-identifiers = { version = "0.18.1", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.1", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.23"

[dev-dependencies]
ruma-events = { version = "=0.22.0-alpha.2", path = "../ruma-events" }
trybuild = "1.0.38"

# These feature gates exist only for the tests. Disabling them results in a
# compile error.
[features]
default = ["client", "server"]
client = []
server = []
