[package]
authors = ["Wim de With <wf@dewith.io>"]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix application service API."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-appservice-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.1.0"
edition = "2018"

[dependencies]
ruma-api = { version = "0.16.1", path = "../ruma-api" }
ruma-events = { version = "0.21.3", path = "../ruma-events" }
ruma-identifiers = { version = "=0.17.0-pre.1", path = "../ruma-identifiers" }
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.55"
