[package]
authors = ["Wim de With <wf@dewith.io>"]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix application service API."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-appservice-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.2.0-alpha.2"
edition = "2018"

[dependencies]
ruma-api = { version = "=0.17.0-alpha.2", path = "../ruma-api" }
ruma-common = { version = "=0.3.0-alpha.1", path = "../ruma-common" }
ruma-events = { version = "=0.22.0-alpha.2", path = "../ruma-events" }
ruma-identifiers = { version = "=0.18.0-alpha.1", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.0", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[features]
unstable-exhaustive-types = []
