[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Jonas Platte <jplatte@posteo.de>",
    "Isaiah Inuwa <isaiah.inuwa@gmail.com>",
]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix client-server API."
documentation = "https://docs.rs/ruma-client-api"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.10.0-alpha.1"
edition = "2018"

[dependencies]
assign = "1.1.0"
http = "0.2.1"
js_int = { version = "0.1.9", features = ["serde"] }
percent-encoding = "2.1.0"
ruma-api = { version = "=0.17.0-alpha.1", path = "../ruma-api" }
ruma-common = { version = "0.2.0", path = "../ruma-common" }
ruma-events = { version = "=0.22.0-alpha.1", path = "../ruma-events" }
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.3", path = "../ruma-serde" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
strum = { version = "0.19.2", features = ["derive"] }

[dev-dependencies]
maplit = "1.0.2"
matches = "0.1.8"

[features]
unstable-pre-spec = []
unstable-synapse-quirks = []
