[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Jonas Platte <jplatte@posteo.de>",
    "Isaiah Inuwa <isaiah.inuwa@gmail.com>",
]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix client-server API."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.10.0-alpha.2"
edition = "2018"

[dependencies]
assign = "1.1.1"
bytes = "1.0.1"
http = "0.2.2"
js_int = { version = "0.2.0", features = ["serde"] }
maplit = "1.0.2"
percent-encoding = "2.1.0"
ruma-api = { version = "=0.17.0-alpha.2", path = "../ruma-api" }
ruma-common = { version = "0.3.1", path = "../ruma-common" }
ruma-events = { version = "=0.22.0-alpha.2", path = "../ruma-events" }
ruma-identifiers = { version = "0.18.1", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.1", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
maplit = "1.0.2"
matches = "0.1.8"

[features]
compat = []
unstable-exhaustive-types = []
unstable-pre-spec = []
unstable-synapse-quirks = []
client = []
server = []
