[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Jonas Platte <jplatte@posteo.de>",
]
categories = ["api-bindings", "web-programming"]
description = "A Matrix client library."
edition = "2018"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.5.0-alpha.1"

[dependencies]
assign = "1.1.1"
async-stream = "0.3.0"
futures-core = "0.3.8"
http = "0.2.2"
hyper = { version = "0.14.2", features = ["client", "tcp"] }
hyper-tls = { version = "0.5.0", optional = true }
hyper-rustls = { version = "0.22.1", optional = true, default-features = false }
ruma-api = { version = "=0.17.0-alpha.2", path = "../ruma-api" }
ruma-client-api = { version = "=0.10.0-alpha.2", path = "../ruma-client-api" }
ruma-common = { version = "=0.3.0-alpha.1", path = "../ruma-common" }
ruma-events = { version = "=0.22.0-alpha.2", path = "../ruma-events" }
ruma-identifiers = { version = "=0.18.0-alpha.1", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.0", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
anyhow = "1.0.37"
ruma = { version = "0.0.2", path = "../ruma", features = ["client-api"] }
tokio = { version = "1.0.1", features = ["macros", "rt"] }
tokio-stream = { version = "0.1.1", default-features = false }

[features]
default = ["http1", "http2", "tls-native"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
tls-native = ["hyper-tls", "_tls"]
tls-rustls-native-roots = [
    "hyper-rustls",
    "hyper-rustls/native-tokio",
    "_tls-rustls",
]
tls-rustls-webpki-roots = [
    "hyper-rustls",
    "hyper-rustls/webpki-tokio",
    "_tls-rustls",
]

# Internal, not meant to be used directly
_tls = []
_tls-rustls = ["_tls"]
