[package]
authors = ["Jonas Platte <jplatte@posteo.de>",]
categories = ["api-bindings", "web-programming"]
description = "Procedural macros for ruma-common."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-common-macros"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "0.1.5"
proc-macro2 = "1.0.19"
quote = "1.0.7"
syn = { version = "1.0.38", features = ["full", "extra-traits"] }
