[package]
name = "ruma-common"
version = "0.2.0"
authors = ["Jonas Platte <jplatte@posteo.de>"]
description = "Common types for other ruma crates."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2018"

[dependencies]
js_int = { version = "0.1.9", features = ["serde"] }
ruma-api = { version = "=0.17.0-alpha.1", path = "../ruma-api" }
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.3", path = "../ruma-serde" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.57", features = ["raw_value"] }
strum = { version = "0.19.2", features = ["derive"] }

[dev-dependencies]
matches = "0.1.8"
