[package]
name = "ruma-common"
version = "0.2.0"
authors = ["Jonas Platte <jplatte@posteo.de>"]
description = "Common types for other ruma crates."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2018"

[dependencies]
js_int = { version = "0.1.9", features = ["serde"] }
maplit = "1.0.2"
ruma-common-macros = { version = "=0.2.0", path = "../ruma-common-macros" }
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.3", path = "../ruma-serde" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.57", features = ["raw_value"] }

[dev-dependencies]
matches = "0.1.8"

[features]
unstable-exhaustive-types = []
unstable-synapse-quirks = []
