[package]
name = "ruma-common"
version = "0.3.0-alpha.1"
authors = ["Jonas Platte <jplatte@posteo.de>"]
description = "Common types for other ruma crates."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2018"

[dependencies]
js_int = { version = "0.2.0", features = ["serde"] }
maplit = "1.0.2"
ruma-identifiers = { version = "=0.18.0-alpha.1", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.0", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.60", features = ["raw_value"] }

[dev-dependencies]
matches = "0.1.8"

[features]
compat = []
unstable-exhaustive-types = []
unstable-pre-spec = []
