[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Jonas Platte <jplatte@posteo.de>",
    "Devin Ragotzy <devin.ragotzy@gmail.com>",
]
categories = ["api-bindings", "web-programming"]
description = "A procedural macro used by the ruma-events crate."
edition = "2018"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-events-macros"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.22.0-alpha.2"

[dependencies]
syn = { version = "1.0.57", features = ["full"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
proc-macro-crate = "1.0.0"

[lib]
proc-macro = true

[dev-dependencies]
ruma-identifiers = { version = "0.18.0", path = "../ruma-identifiers" }
serde_json = "1.0.60"
js_int = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.118", features = ["derive"] }
