[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings"]
description = "Serializable types for the events in the Matrix specification."
documentation = "https://docs.rs/ruma-events"
homepage = "https://github.com/ruma/ruma-events"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-events"
readme = "README.md"
repository = "https://github.com/ruma/ruma-events"
version = "0.21.3"
edition = "2018"

[dependencies]
js_int = { version = "0.1.5", features = ["serde"] }
ruma-common = { version = "0.1.3", path = "../ruma-common" }
ruma-events-macros = { version = "=0.21.3", path = "../ruma-events-macros" }
ruma-identifiers = { version = "0.16.2", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.2", path = "../ruma-serde" }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = { version = "1.0.53", features = ["raw_value"] }
strum = { version = "0.18.0", features = ["derive"] }

[dev-dependencies]
maplit = "1.0.2"
matches = "0.1.8"
ruma-identifiers = { version = "0.16.2", path = "../ruma-identifiers", features = ["rand"] }
trybuild = "1.0.28"
criterion = "0.3.2"

[[bench]]
name = "event_deserialize"
harness = false
