[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings"]
description = "Serializable types for the events in the Matrix specification."
documentation = "https://docs.rs/ruma-events"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-events"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.22.0-alpha.1"
edition = "2018"

[dependencies]
criterion = { version = "0.3.3", optional = true }
js_int = { version = "0.2.0", features = ["serde"] }
ruma-common = { version = "0.2.0", path = "../ruma-common" }
ruma-events-macros = { version = "=0.22.0-alpha.1", path = "../ruma-events-macros" }
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.3", path = "../ruma-serde" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.57", features = ["raw_value"] }

[dev-dependencies]
maplit = "1.0.2"
matches = "0.1.8"
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers", features = ["rand"] }
trybuild = "1.0.31"

[features]
unstable-exhaustive-types = []
unstable-pre-spec = []
unstable-synapse-quirks = []

[[bench]]
name = "event_deserialize"
harness = false
