[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings"]
description = "Serializable types for the events in the Matrix specification."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-events"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.22.0-alpha.2"
edition = "2018"

[dependencies]
criterion = { version = "0.3.3", optional = true }
js_int = { version = "0.2.0", features = ["serde"] }
ruma-common = { version = "=0.3.0-alpha.1", path = "../ruma-common" }
ruma-events-macros = { version = "=0.22.0-alpha.2", path = "../ruma-events-macros" }
ruma-identifiers = { version = "=0.18.0-alpha.1", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.0", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.60", features = ["raw_value"] }
pulldown-cmark = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
maplit = "1.0.2"
matches = "0.1.8"
ruma-identifiers = { version = "=0.18.0-alpha.1", path = "../ruma-identifiers", features = ["rand"] }
trybuild = "1.0.38"

[features]
compat = []
markdown = ["pulldown-cmark"]

unstable-exhaustive-types = []
unstable-pre-spec = []

[[bench]]
name = "event_deserialize"
harness = false
