[package]
authors = [
    "Jonas Platte <jplatte+git@posteo.de>",
    "Isaiah Inuwa <isaiah.inuwa@gmail.com>",
]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix server-server API."
documentation = "https://docs.rs/ruma-federation-api"
edition = "2018"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-federation-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma-federation-api"
version = "0.0.2"

[dependencies]
js_int = "0.1.7"
ruma-api = { version = "0.16.1", path = "../ruma-api" }
ruma-common = { version = "0.1.3", path = "../ruma-common" }
ruma-events = { version = "0.21.3", path = "../ruma-events" }
ruma-identifiers = { version = "0.17.0", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.2", path = "../ruma-serde" }
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.55"

[dev-dependencies]
matches = "0.1.8"
