[package]
authors = [
    "Jonas Platte <jplatte+git@posteo.de>",
    "Isaiah Inuwa <isaiah.inuwa@gmail.com>",
]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix server-server API."
documentation = "https://www.ruma.io/"
edition = "2018"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-federation-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.0.3"

[dependencies]
js_int = "0.1.9"
ruma-api = { version = "=0.17.0-alpha.1", path = "../ruma-api" }
ruma-common = { version = "0.2.0", path = "../ruma-common" }
ruma-events = { version = "=0.22.0-alpha.1", path = "../ruma-events" }
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.3", path = "../ruma-serde" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies]
matches = "0.1.8"

[features]
unstable-exhaustive-types = []
unstable-pre-spec = []
