[package]
authors = [
    "Jonas Platte <jplatte+git@posteo.de>",
    "Isaiah Inuwa <isaiah.inuwa@gmail.com>",
]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix server-server API."
edition = "2018"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-federation-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.1.0-alpha.1"

[dependencies]
js_int = { version = "0.2.0", features = ["serde"] }
ruma-api = { version = "=0.17.0-alpha.2", path = "../ruma-api" }
ruma-common = { version = "=0.3.0-alpha.1", path = "../ruma-common" }
ruma-events = { version = "=0.22.0-alpha.2", path = "../ruma-events" }
ruma-identifiers = { version = "=0.18.0-alpha.1", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.0", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
matches = "0.1.8"

[features]
unstable-exhaustive-types = []
unstable-pre-spec = []
