[package]
authors = ["Jonas Platte <jplatte@posteo.de>"]
description = "Procedural macros for creating Matrix identifiers."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-identifiers-macros"
repository = "https://github.com/ruma/ruma"
version = "0.17.3"
edition = "2018"

[dependencies]
ruma-identifiers-validation = { version = "0.1.1", path = "../ruma-identifiers-validation" }
quote = "1.0.7"
proc-macro2 = "1.0.19"
syn = "1.0.35"

[lib]
proc-macro = true
