[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings"]
description = "Resource identifiers for Matrix."
documentation = "https://docs.rs/ruma-identifiers"
homepage = "https://github.com/ruma/ruma-identifiers"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-identifiers"
readme = "README.md"
repository = "https://github.com/ruma/ruma-identifiers"
version = "0.16.2"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["serde", "std"]
alloc = []
std = ["alloc"]

[dependencies]
either = { version = "1.5.3", optional = true }
rand = { version = "0.7.3", optional = true }
serde = { version = "1.0.113", optional = true, features = ["derive"] }
strum = { version = "0.18.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.55"
